--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ethan Ward - Web Developer from New York</title>
+  <title>Ian Melo - Web Developer</title>
 
   <!-- 
     - favicon
@@ -581,7 +581,7 @@
     <div class="container">
 
       <p class="copyright">
-        &copy; 2022 <a href="#" class="copyright-link">codewithsadee</a>. All Rights Reseverd
+        &copy; 2023 <a href="#" class="copyright-link">iChumbo</a>. All Rights Reseverd
       </p>
 
       <ul class="footer-list">
